feat: expose external intervention feed
